opam-version: "2.0"
name: "tjr_lru_cache"
version: "0.0.1"

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_lru_cache"
bug-reports: "https://github.com/tomjridge/tjr_lru_cache/issues"
# dev-repo: "https://github.com/tomjridge/tjr_lru_cache.git"

# ----------------------------------------------------------------------

depends: [
  "tjr_profile"
  "tjr_polymap"
  "tjr_monad"
  "tjr_fs_shared"
]

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]


