(library
  (name tjr_lru_cache)
  (public_name tjr_lru_cache)
;  (inline_tests)  ; FIXME disable for production?
  (libraries tjr_monad tjr_profile tjr_fs_shared lru))

(env
  (_ (flags (:standard -open Tjr_lib -open Tjr_monad -open Tjr_fs_shared -open Tjr_profile))))

(include_subdirs unqualified)
