(executable
  (public_name lru_test_main)
  (libraries tjr_lru_cache containers minicli))

(env
 (_ (flags (:standard -open Tjr_lib -open Tjr_monad -open Tjr_fs_shared 
             -open Tjr_lru_cache 
))))

; ppx_deriving_yojson.runtime is referenced from isa_btree FIXME

; FIXE ppx_deriving_yojson.runtime has to occur early in order for some reason
